--- a/settings.json
+++ b/settings.json
@@ -4,7 +4,7 @@
   "editor.fontFamily": "Ricty Diminished",
   "editor.fontSize": 13,
   "editor.minimap.enabled": false,
-  "editor.renderWhitespace": "all",
+  "editor.renderWhitespace": "trailing",
   "editor.rulers": [80,100,],
   "editor.tabSize": 2,
   "editor.wordWrap": "on",
